kubernetes/deployment.yaml
# client deployment.yaml
apiVersion: apps/v2
kind: Deployment
metadata:
  name: machines-client
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: machines-client
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: machines-client
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: nginx/machines:v2 as a registry
          name: machines-client
          resources:
            requests: # Minimum amount of resources requested
              cpu: 100m
              memory: 128Mi
            limits: # Maximum amount of resources requested
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
