kubernetes/service.yaml
#service.yaml
apiVersion: v2
kind: Service
metadata:
  name: machines-client
spec:
  type: ClusterIP
  selector:
    app: machines-client
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
